--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Tic Tac Toe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>Tic-Tac-Toe</h1>
-    <section class="game-container">
+    <section class="board-container">
 
     </section>
+    <script src="game.js" type="module"></script>
 </body>
 
 </html>
