--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <h1>Tic-Tac-Toe</h1>
-    <section class="board-container">
+    <div class="board-container">
 
-    </section>
+    </div>
     <script src="game.js" type="module"></script>
 </body>
 
