Implement a message box
This will keep track of whos turn it is
Will tell you which player has won and if there is a tie

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <div class="board-container">
 
     </div>
+    <div>
+        Message Box
+        <p class="active-message"></p>
+    </div>
     <script src="game.js" type="module"></script>
 </body>
 
