Get rid of event listeners on tds

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
     </div>
 
     <div class="main-game">
-        <div class="board-container">
-        </div>
+        <div class="board-container"></div>
         <p class="active-message"></p>
     </div>
 
